--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
-David Rajchenbach-Teller <Yoric@users.sf.net>
+David Rajchenbach-Teller <D.O.Teller@gmail.com>
 
 Icon background from Bibliotheques Virtuelles Humanistes
