--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,8 @@
 David Rajchenbach-Teller <D.O.Teller@gmail.com>
+Alexis Manganiello <manganiello.alexis@gmail.com>
+Axel Ajavon <axelajavon@gmail.com>
+Karim Smaili <smailikarim@ymail.com>
+Maxime Lecoq <maxime.lecoq.1@etudiant.univ-rennes1.fr>
+Antoine Mazelin <antoine.mazelin@free.fr>
 
 Icon background from Bibliotheques Virtuelles Humanistes
