Added AlexManga to the list of contributors

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,5 @@
 David Rajchenbach-Teller <D.O.Teller@gmail.com>
+Alexis Manganiello <manganiello.alexis@gmail.com>
+
 
 Icon background from Bibliotheques Virtuelles Humanistes
