Added Axel Ajavon, Karim Smaili, Maxime Lecoq to the list of authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,7 @@
 David Rajchenbach-Teller <D.O.Teller@gmail.com>
 Alexis Manganiello <manganiello.alexis@gmail.com>
-
+Axel Ajavon <axelajavon@gmail.com>
+Karim Smaili <smailikarim@ymail.com>
+Maxime Lecoq <maxime.lecoq.1@etudiant.univ-rennes1.fr>
 
 Icon background from Bibliotheques Virtuelles Humanistes
