--- a/AUTHORS
+++ b/AUTHORS
@@ -3,5 +3,6 @@ Alexis Manganiello <manganiello.alexis@gmail.com>
 Axel Ajavon <axelajavon@gmail.com>
 Karim Smaili <smailikarim@ymail.com>
 Maxime Lecoq <maxime.lecoq.1@etudiant.univ-rennes1.fr>
+Antoine Mazelin <antoine.mazelin@free.fr>
 
 Icon background from Bibliotheques Virtuelles Humanistes
