Added Sam Rottenberg to the list of authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,5 +4,6 @@ Axel Ajavon <axelajavon@gmail.com>
 Karim Smaili <smailikarim@ymail.com>
 Maxime Lecoq <maxime.lecoq.1@etudiant.univ-rennes1.fr>
 Antoine Mazelin <antoine.mazelin@free.fr>
+Sam Rottenberg <sam@rottenberg.me>
 
 Icon background from Bibliotheques Virtuelles Humanistes
