Added a few AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,5 +5,9 @@ Karim Smaili <smailikarim@ymail.com>
 Maxime Lecoq <maxime.lecoq.1@etudiant.univ-rennes1.fr>
 Antoine Mazelin <antoine.mazelin@free.fr>
 Sam Rottenberg <sam@rottenberg.me>
+Jordi Charpentier <jordi.charpentier@gmail.com>
+Fatim Zahara Kone <zahara.kone@gmail.com>
+Badjeck Ipoumb Michelle <badjeck@yahoo.fr>
+
 
 Icon background from Bibliotheques Virtuelles Humanistes
